# flexdesk

./: .gitignore  README.md  compose.yaml
.github/workflows/: ci.yml
.postman/: resources.yaml
Middleware/: Middleware.sln
Middleware/Middleware/: .gitignore  Dockerfile  Middleware.csproj  Program.cs
Middleware/Middleware/Controllers/: BookingController.cs  (+1 more)
backend/: Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 108a74f3d3b9_initial.py
backend/api/utils/: key_builder.py
backend/api/v1/: account.py  booking.py  client.py  client_archive.py  login.py  master.py  master_archive.py  organization.py  organization_archive.py  users.py
backend/core/: config.py  dependencies.py  security.py
backend/db/: init.py  models.py  session.py
backend/schemas/: account.py  auth.py  base.py  booking.py  client.py  client_archive.py  master.py  master_archive.py  organization.py  organization_archive.py  user.py
backend/services/account/: exceptions.py  service.py
backend/services/admin/: init.py
backend/services/auth/: exceptions.py  role_service.py  service.py
backend/services/booking/: service.py
backend/services/client/: exceptions.py  service.py
backend/services/client_archive/: service.py
backend/services/master/: exceptions.py  service.py
backend/services/master_archive/: service.py
backend/services/organization/: exceptions.py  service.py
backend/services/organization_archive/: service.py
backend/tests/: conftest.py  test_booking_service.py
(+43 files in other folders)
