[project]
version="0.1.0"

[tool.ruff]
line-length = 79
target-version = "py312"
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "W"]

[tool.ruff.lint.per-file-ignores]
"api/**/*.py" = ["E501"]
"schemas/*.py" = ["E501"]
